# openair-cn

etc/: spgw_c.conf  spgw_u.conf
scripts/: build_spgwc  build_spgwu
src/common_xgw/: 3gpp_129.244.cpp  3gpp_129.244.h  3gpp_129.244.hpp  3gpp_23.003.h  3gpp_24.008.h  3gpp_29.274.cpp  3gpp_29.274.h  3gpp_29.274.hpp  CMakeLists.txt  common_defs.h  common_root_types.c  common_root_types.h  itti_async_shell_cmd.hpp  logger.cpp  logger.hpp  serializable.hpp
src/common_xgw/itti/: itti.cpp  itti.hpp  itti_msg.cpp  itti_msg.hpp
src/common_xgw/msg/: itti_msg_s11.hpp  itti_msg_sxa.hpp  itti_msg_sxab.hpp  itti_msg_sxb.hpp  itti_msg_sxc.hpp  msg_gtpv2c.hpp  msg_pfcp.hpp
src/common_xgw/utils/: CMakeLists.txt  async_shell_cmd.cpp  async_shell_cmd.hpp  conversions.c  conversions.cpp  conversions.h  conversions.hpp  dynamic_memory_check.c  enum_string.c  epc.cpp  epc.h  epc_conversions.hpp  if.hpp  pid_file.cpp  pid_file.hpp  string.cpp  string.hpp
src/oai_spgw_c/: CMakeLists.txt  main.cpp  options.cpp
src/oai_spgw_c/gtpv2-c/: CMakeLists.txt  gtpv2c.cpp  gtpv2c.hpp
src/oai_spgw_c/udp/: CMakeLists.txt
src/oai_spgw_u/: CMakeLists.txt  main.cpp
src/pfcp/: CMakeLists.txt  pfcp.cpp  pfcp.hpp
src/pgw_c/: CMakeLists.txt  pgw_app.cpp  pgw_app.hpp  pgw_config.cpp  pgw_config.hpp  pgw_context.cpp  pgw_context.hpp  pgw_paa_static.cpp  pgw_pcef_emulation.cpp  pgw_pco.cpp  pgw_pco.hpp  pgw_s5s8.cpp  pgw_s5s8.hpp  pgwc_procedure.cpp  pgwc_procedure.hpp  pgwc_sxab.cpp  pgwc_sxab.hpp
src/sgw_c/: CMakeLists.txt  mme_s11.cpp  mme_s11.hpp  sgwc_app.cpp  sgwc_app.hpp  sgwc_config.cpp  sgwc_config.hpp  sgwc_eps_bearer_context.cpp  sgwc_eps_bearer_context.hpp  sgwc_pdn_connection.cpp  sgwc_procedure.cpp  sgwc_procedure.hpp  sgwc_s11.cpp  sgwc_s11.hpp  sgwc_s5s8.cpp  sgwc_s5s8.hpp  sgwc_sxa.cpp  sgwc_sxa.hpp
src/spgw_u/: CMakeLists.txt  spgwu_app.cpp  spgwu_app.hpp  spgwu_config.cpp  spgwu_config.hpp  spgwu_sx.cpp  spgwu_sx.hpp
